--- a/manifests/ovh-nginx-operator.yaml
+++ b/manifests/ovh-nginx-operator.yaml
@@ -1,9 +1,3 @@
-# The namespace where the operator is deployed
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: ovh-nginx-operator
----
 # Authorisations for the operator
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -81,6 +75,9 @@ spec:
       serviceAccountName: ovh-nginx-operator-sa
       containers:
       - name: operator
-        image: wilda/ovh-nginx-operator:1.0.0
+        image: 56hkk1xk.gra7.container-registry.ovh.net/example/ovh-nginx-operator:1.0.0
         imagePullPolicy: Always
+      imagePullSecrets:
+      - name: regcred
+        
 ---
